--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.ViewImage"></activity>
+        <activity android:name=".ui.Videoactivity" />
+        <activity android:name=".ui.Splashactivity" />
+        <activity android:name=".ui.SigninUp" />
+        <activity android:name=".ui.RecoveryImage" />
+        <activity android:name=".ui.DisplayImageActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
